--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "build" : "npx prisma db push && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prisma": "^5.0.0",
     "@prisma/client": "^5.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
