--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build" : "npx prisma db push && node app.js",
+    "build": "npx prisma db push && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "prisma": "^5.0.0",
     "@prisma/client": "^5.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "jsonwebtoken": "^9.0.1",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.0.0"
   },
   "devDependencies": {
     "prisma": "^5.0.0"
