--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "nodemon": "^3.0.1",
-    "prisma": "^5.0.0"
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "prisma": "^5.0.0"
+    "prisma": "^5.1.1"
   }
 }
