--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   },
   "scripts": {
     "build": "npx prisma db push && node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-list-endpoints": "^6.0.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
