--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
   },
