--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "luxon": "^3.5.0",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
