--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "express": "^4.18.2",
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^7.0.1",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.1",
     "luxon": "^3.5.0",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.0.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "prisma": "^5.11.0"
