--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^6.7.0",
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -37,6 +37,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@prisma/extension-optimize": "^1.1.8",
     "prisma": "^5.11.0"
   }
 }
