--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "@prisma/client": "^6.7.0",
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.1",
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.1",
     "luxon": "^3.5.0",
-    "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.0.1",
