CAMBIOS AL 08/06/2025 : Ajustes para los movimientos de caja

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,6 @@ sonar.sources=.
 # Configuración del servidor local
 sonar.host.url=http://localhost:9000
 sonar.token=sqp_91d4adb8dce6d4a09ab1b2fcb166f68a67bcd816
+#sonar.exclusions=**/controllers/**.js,**/routes/**.js,**/controller/**.js
+sonar.exclusions=**/controlers/**,**/routes/**,**/middlewares/**
+
